--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
+<li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="http://danielkhashabi.com/files/?">slides</a>)</p>
+</li>
 <li><p>2024, Oracle Labs ML seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
 </li>
 <li><p>2024, Tel Aviv NLP seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">slides</a>)</p>
@@ -85,7 +87,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 <li><p>2024, Workshop on &lsquo;&lsquo;LLMs for Healthy Aging&rsquo;&rsquo; (<a href="http://danielkhashabi.com/files/2023_aitc/2023-jhu-aitc.pdf">slides</a>)</p>
 </li>
-<li><p>2023, NYU's &lsquo;&lsquo;Text-as-Data&rsquo;&rsquo; talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
+<li><p>2023, NYU &lsquo;&lsquo;Text-as-Data&rsquo;&rsquo; talk series (<a href="http://danielkhashabi.com/files/2023_nyu/2023-nyu2-slides.pdf">slides</a>)</p>
 </li>
 <li><p>2023, JHU's Center for Language and Speech Technologies seminar (<a href="https://www.youtube.com/watch?v=YuxmtgBk-Ls">video</a>)</p>
 </li>
@@ -179,11 +181,11 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://danielkhashabi.com/files/2024_analobench/EMNLP_2024_Analogies_Poster.pdf">[poster]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://danielkhashabi.com/files/2024_analobench/Analogies-presentation-novideo.pdf">[slides]</a> <a href="https://danielkhashabi.com/files/2024_analobench/EMNLP_2024_Analogies_Poster.pdf">[poster]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <b>Outstanding paper award.</b> <font size=-1><a href="https://danielkhashabi.com/files/2024_cuttoff/2024_COLM_DatedData.pdf">[slides]</a> <a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://github.com/nexync/dated_data/">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <b>Outstanding paper award.</b> <font size=-1><a href="https://danielkhashabi.com/files/2024_cuttoff/2024_COLM_DatedData.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=8YvvSspPXEE">[talk]</a> <a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://github.com/nexync/dated_data/">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -448,7 +450,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-05 21:53:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-07 10:29:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
