--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
+<li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="https://danielkhashabi.com//files/2024_cambridge_talk/2024-cambridge2.pdf">slides</a>)</p>
+</li>
 <li><p>2024, Oracle Labs ML seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
 </li>
 <li><p>2024, Tel Aviv NLP seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-TAU.pdf">slides</a>)</p>
@@ -448,7 +450,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-07 10:29:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-07 12:07:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
