--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@ What forms of interaction are most effective and meaningful for humans? How can 
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Effective Is Self-Consistency for Long-Context Problems?</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.01101</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2410.08968"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2410.08968</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -181,7 +185,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://danielkhashabi.com/files/2024_analobench/Analogies-presentation-novideo.pdf">[slides]</a> <a href="https://danielkhashabi.com/files/2024_analobench/EMNLP_2024_Analogies_Poster.pdf">[poster]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Jacob Choi, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Shreya Sharma, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Vijay Tiyyala, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://danielkhashabi.com/files/2024_analobench/Analogies-presentation-novideo.pdf">[slides]</a> <a href="https://youtu.be/X_U_jdXXfv0">[talk]</a> <a href="https://danielkhashabi.com/files/2024_analobench/EMNLP_2024_Analogies_Poster.pdf">[poster]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -450,7 +454,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-07 12:07:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-07 14:00:06 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
