--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Dong Yu. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2309.16155"><b>The Trickle-down Impact of Reward (In-)consistency on RLHF.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Dong Yu. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -230,10 +230,6 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://openreview.net/forum?id=MeHmwCDifc"><b>The Trickle-down Impact of Reward Inconsistency on RLHF.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Dong Yu. <br />   <font color="DarkRed">The Twelfth International Conference on Learning Representations</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -369,6 +365,10 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
+<li><p><a href="http://arxiv.org/abs/1901.02522"><b>On the Possibilities and Limitations of Multi-hop Reasoning Under Linguistic Imperfections.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Erfan  Sadeqi Azer, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:1901.02522</font>, 2019. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/1909.03065"><b>&lsquo;&lsquo;Going on a vacation&rsquo;&rsquo; takes longer than &lsquo;&lsquo;Going for a walk&rsquo;&rsquo;: A Study of Temporal Commonsense Understanding.</b></a>  <br />    <a href="http://xuanyu.me/"><font color="Black"> Ben Zhou</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Qiang Ning and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_mctaco/mctaco-slides-v3.pdf">[slides]</a> <a href="https://vimeo.com/426360973">[talk]</a> <a href="https://github.com/CogComp/MCTACO">[code]</a> <a href="https://leaderboard.allenai.org/mctaco/submissions/public">[leaderboard]</a></font></p>
 </li>
 </ul>
@@ -378,10 +378,6 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/1906.03538"><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims.</b></a>  <br />    <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Wenpeng Yin, <a href="https://www.cis.upenn.edu/~ccb/"><font color="Black"> Chris Callison-Burch</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectrum">[code]</a> <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE">[demo]</a> <a href="http://danielkhashabi.com/files/2019_perspectrum/viz.html">[visualization]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="http://arxiv.org/abs/1901.02522"><b>On the Possibilities and Limitations of Multi-hop Reasoning Under Linguistic Imperfections.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Erfan  Sadeqi Azer, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">arXiv</font>, 2019. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -454,7 +450,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-10 15:15:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-11 07:02:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
