--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2024. <font size=-1><a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_know_but_dont_tell/final_presentation.pptx">[poster]</a> <a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -450,7 +450,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-11 07:02:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-12 09:41:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
