--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@ What forms of interaction are most effective and meaningful for humans? How can 
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2411.01101"><b>How Effective Is Self-Consistency for Long-Context Problems?</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.01101</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -450,7 +454,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-12 09:41:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-19 16:07:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
