--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div class="infoblock">
 <div class="blockcontent">
-<p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i></p>
+<p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i><br />
+<i>If you're seeking <b>postdoctoral</b> positions, consider applying for the <a href="https://apply.interfolio.com/158121">DSAI fellowships</a>. (<b>deadline: Jan 06, 2025</b>)</i></p>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
@@ -454,7 +455,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-23 19:54:34 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-26 20:35:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
