--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <b>Finalist for Outstanding Certification.</b> <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -455,7 +455,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-10 08:33:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-13 15:05:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
