--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2411.11844"><b>Generative World Explorer.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Rama Chellappa, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and others. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2411.11844"><b>Generative World Explorer.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -262,7 +266,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <b>Finalist for Outstanding Certification.</b> <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />   <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <b>Finalist for outstanding certification.</b> <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -455,7 +459,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-13 15:05:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-16 11:52:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
