--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Rama Chellappa, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and others. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -459,7 +459,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-16 11:52:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-19 11:26:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
