--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ Email: <tt>danielk<img src="https://danielkhashabi.com/files/abababa.png" width=
 <p><p style="margin-bottom:0.1cm;"></p>
 Other affiliations:</p>
 <ul>
-<li><p>Member, <a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a></p>
+<li><p><a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a></p>
 </li>
-<li><p>Member, <a href="https://ai.jhu.edu/">Data Science and AI Institute</a></p>
+<li><p><a href="https://ai.jhu.edu/">Data Science and AI Institute</a></p>
 </li>
-<li><p>Affiliate, <a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a></p>
+<li><p><a href="https://iaa.jhu.edu/">Institute for Assured Autonomy</a></p>
 </li>
 </ul>
 </td></tr></table>
@@ -146,11 +146,11 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2412.09624"><b>GenEx: Generating an Explorable World.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, Junfei Xiao, Luoxin Ye, Jiahao Wang, Cheng Peng, Chen Wei, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2412.09624</font>, 2024. <font size=-1><a href="https://genex.world/">[project]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2411.11844"><b>Generative World Explorer.</b></a>  <br />    Taiming Lu, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2411.11844"><b>Generative World Explorer.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.11844</font>, 2024. <font size=-1><a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -194,7 +194,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_know_but_dont_tell/final_presentation.pptx">[poster]</a> <a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Muhan Gao, Kuai Yu, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_know_but_dont_tell/final_presentation.pptx">[poster]</a> <a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -459,7 +459,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-19 11:26:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-02 18:43:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
