--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
 <ul>
-<li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a></p>
+<li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a>, <a href="https://self-supervised.cs.jhu.edu/sp2025/">Spring 2025</a></p>
 </li>
 <li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a></p>
 </li>
@@ -459,7 +459,7 @@ What forms of interaction are most effective and meaningful for humans? How can 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-02 18:43:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-03 16:02:07 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
